--- a/pug/modules/_aside.pug
+++ b/pug/modules/_aside.pug
@@ -1,26 +1,26 @@
 #leftNavigationPseudo.left-navigation-pseudo.collapse.show
-//- include ../vidgets/_tabvidget-01
+//- include ../widgets/_tabwidget-01
 
-include ../vidgets/_vidget-slider-01
+include ../widgets/_widget-slider-01
 
-include ../vidgets/_vidget-calendar
+include ../widgets/_widget-calendar
 
-//- include ../vidgets/_tabvidget-02
+//- include ../widgets/_tabwidget-02
 
-include ../vidgets/_vidget-slider-02
+include ../widgets/_widget-slider-02
 
-include ../vidgets/_vidget-slider-03
+include ../widgets/_widget-slider-03
 
-//- include ../vidgets/_tabvidget-03
+//- include ../widgets/_tabwidget-03
 
-include ../vidgets/_vidget-01
+include ../widgets/_widget-01
 
-include ../vidgets/_vidget-02
+include ../widgets/_widget-02
 
-include ../vidgets/_count
+include ../widgets/_count
 
-include ../vidgets/_counts
+include ../widgets/_counts
 
-include ../vidgets/_vidget-danger
+include ../widgets/_widget-danger
 
-include ../vidgets/_vidget-succes
+include ../widgets/_widget-succes
