--- a/pug/modules/_header.pug
+++ b/pug/modules/_header.pug
@@ -104,8 +104,8 @@ header.header
 								.menuNav__textbox.menuNavHeader__textbox
 									a.menuNav__text.menuNavHeader__text(href='#')
 										span КОНТАКТЫ
-			.header-box__qwestion
-				.qwestion.header-qwestion
+			.header-box__question
+				.question.header-question
 					a.link(href='#')
 						| Вопрос 
 						br
