--- a/pug/widgets/_widget-calendar.pug
+++ b/pug/widgets/_widget-calendar.pug
@@ -1,10 +1,10 @@
-// VIDGET vidget-calendar
-#calendarVidgetBox.vidget-box.vidget-calendar
-	a.vidget-title.vidget-title_link(href="/calendar.html")
+// widget widget-calendar
+#calendarwidgetBox.widget-box.widget-calendar
+	a.widget-title.widget-title_link(href="/calendar.html")
 		| КАЛЕНДАРЬ СОБЫТИЙ 
 		button.event-control
 			i.icon-arrow-down
-	.vidget-subtitle
+	.widget-subtitle
 		span Сегодня 20 ноября 2018
 	.ui-datepicker-inline.ui-datepicker.ui-widget.ui-widget-content.ui-helper-clearfix.ui-corner-all
 		table.ui-datepicker-calendar
@@ -93,35 +93,35 @@
 		a.event.calendar-lnk(href="calendar.html#events-06-10-2018")
 			.event-title
 				span День металлурга
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
+			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
 		a.event.calendar-lnk(href="calendar.html#event2-06-10-2018")
 			.event-title
 				span День поедателей йогуртов
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
+			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
 		a.event.calendar-lnk(href="calendar.html#event3-06-10-2018")
 			.event-title
 				span День металлурга 2
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
+			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
 	#event-14.events
 		a.event.calendar-lnk(href="calendar2.html#events-14-10-2018")
 			.event-title
 				span 1 День великого праздника в две строки
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
+			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
 		a.event.calendar-lnk(href="calendar2.html#event2-14-10-2018")
 			.event-title
 				span 2 День великого праздника в две строки
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
+			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
 		a.event.calendar-lnk(href="calendar2.html#event3-14-10-2018")
 			.event-title
 				span 3 День великого праздника в две строки
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
+			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
 	#event-20.events
 		a.event.calendar-lnk(href="calendar3.html#events-24-10-2018")
 			.event-title
 				span День поедателей йогуртов
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-02.jpg);")
+			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/article-img-02.jpg);")
 	#event-24.events
 		a.event.calendar-lnk(href="calendar3.html#events-24-10-2018")
 			.event-title
 				span День поедателей йогуртов
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-05.jpg);")
+			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/article-img-05.jpg);")
