--- a/sass/_header-scroll.scss
+++ b/sass/_header-scroll.scss
@@ -20,7 +20,7 @@
 				flex: 0 0 42.73%;
 				max-width: 42.73%;
 			}
-			&__qwestion {
+			&__question {
 				flex: 0 0 11.11%;
 				max-width: 11.11%;
 			}
@@ -41,7 +41,7 @@
 				height: 25px;
 			}
 		}
-		&-qwestion {
+		&-question {
 			// transition: 0.4s;
 			background-image: none;
 			padding: 0;
