--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -75,7 +75,7 @@
 			flex: 0 0 25%;
 			max-width: 25%;
 		}
-		&__qwestion {
+		&__question {
 			padding: 0 15px;
 			width: 100%;
 			flex: 0 0 16.66667%;
@@ -118,7 +118,7 @@
 			font-size: 12px;			
 		}
 	}
-	&-qwestion {
+	&-question {
 		background-color: #efefef;
 		background: transparent url('../img/omk_question.png') center no-repeat;
 		background-size: contain;
