--- a/sass/_widget-calendar.scss
+++ b/sass/_widget-calendar.scss
@@ -1,4 +1,4 @@
-.vidget-calendar {
+.widget-calendar {
 	padding: 15px;
 	margin-top: 25px;
 	border-radius: 5px;
@@ -8,7 +8,7 @@
 	// 	height: 20px;
 	// 	background-color: red;
 	// }
-	&.vidget-box {
+	&.widget-box {
 		width: auto;
 		border: 1px solid #dddee0;
 		background-color: #f4f5f5;
