--- a/sass/_widget.scss
+++ b/sass/_widget.scss
@@ -1,4 +1,4 @@
-.vidget {
+.widget {
 	&-box {
 		margin-bottom: 15px;
 		margin-top: 0;
@@ -223,7 +223,7 @@
 	}
 }
 
-.vidget-slider {
+.widget-slider {
 		margin-left: -7.5px;
 		margin-right: -7.5px;
 	&-wrap {
