--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,8 +41,8 @@
 @import '_menu-horizontal.scss';
 @import '_content.scss';
 @import '_cards.scss';
-@import '_vidget-calendar.scss';
-@import '_vidgets.scss';
+@import '_widget-calendar.scss';
+@import '_widgets.scss';
 @import '_calendar.scss';
 @import '_article.scss';
 @import '_comment.scss';
